# JurDatasetBrasil

./: .dockerignore  .env.example  .flake8  .mcp.json  .pre-commit-config.yaml  .space.yml  .vercelignore  CLAUDE.md  Dockerfile  Dockerfile.huggingface  GEMINI.md  Makefile  PRD.md  README.md  README_scripts.md  ROADMAP.md  SCHEMA.md  VERCEL_ENV.md  codex.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  repomix-output.xml  requirements-dev.txt  requirements-huggingface.txt  requirements.txt  vercel.json
.claude/: settings.json
.claude/agents/: vercel-deployment-specialist.md
.claude/commands/: vercel-deploy-optimize.md
.github/: PRE_COMMIT_SETUP.md
.github/workflows/: docker-build-scan.yml  sync-huggingface.yml
0-RawDocs/súmulas_tribunais_superiores/: sumulas_stm_atualizado.docx  sumulas_tse_atualizado.docx  sumulas_vinculantes_atualizado.docx
1-MarkdownClean/súmulas_tribunais_superiores/: sumulas_do_tjrj_2023.md
2-Chunks/: README.md
3-FinalDataset/: README.md
4-Benchmarks/: README.md
5-Models/: README.md
Legislacao/Ambiental/: lei_de_atuação_administrativa_cooperada_(lc_140).docx  novo_código_florestal_(lei_12651).docx  política_nacional_dos_recursos_hídricos_(lei_9433).docx  política_nacional_sobre_mudança_do_clima_(lei_12187).docx  procedimentos_para_o_uso_científico_de_animais_(lei_11794).docx  regulamenta,_em_âmbito_federal,_a_lei_11284_(decreto_12046).docx  respons._civil_por_danos_nucleares_e_a_responsabilidade_criminal_por_atos_relacionados_com_atividades_nucleares_(lei_6453).docx  sistema_nacional_de_unidades_de_conservação_-_snuc_(lei_9985).docx
Legislacao/Civil/: alienação_parental_(lei_12.318).docx  estatuto_da_pessoa_com_deficiência_(lei_13146).docx  estatuto_da_pessoa_idosa_(lei_10.741).docx  impenhorabilidade_do_bem_de_família_(lei_8009).docx  investigação_de_paternidade_(lei_8560).docx  jornadas_de_dir._civil_e_dir._comercial_(inclusão_novos_enunc._viii_jornad_dir._civil_e_iii_jornad_dir._comercial).doc  lei_de_introdução_às_normas_do_direito_brasileiro_(lindb).docx  registros_públicos_(lei_6015).docx
Súmulas_Tribunais_Superiores/: sumulas_stf_atualizado.docx  sumulas_stj_atualizado.docx  sumulas_tcu_atualizado.docx  sumulas_tnu_atualizado.docx
api/: index.py  requirements.txt
dashboard/: app.py  index.html
dashboard/pages/: 1_📊_Overview.py  (+2 more)
docs/: DOCKER.md  HUGGINGFACE.md  architecture.md  docling.md  openrouter.md  supabase.md
huggingface/: README.md  app.py  upload_dataset.py
scripts/: 01_convert_to_markdown.py  02_create_chunks.py  03_generate_examples.py  04_validate_quality.py  05_export_to_jsonl.py  config.py  database.py  deploy_to_hf.py  run_pipeline.py  setup_database.sql
(+169 files in other folders)
